// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs works when: displays selection and items 1`] = `
<DocumentFragment>
  <div
    class="relative 
        flex [&>*:first-child]:rounded-s-md [&>*:last-child]:rounded-r-md"
  >
    <button
      class="font-medium flex-1 py-2 px-3 bg-green-700 disabled:bg-green-700/30 text-white cursor-auto disabled:text-white/60 dark:disabled:text-white/30"
    >
      First
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30"
    >
      Second
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30"
    >
      Last
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs works when: may be disabled 1`] = `
<DocumentFragment>
  <div
    class="relative 
        flex [&>*:first-child]:rounded-s-md [&>*:last-child]:rounded-r-md"
  >
    <button
      class="font-medium flex-1 py-2 px-3 bg-green-700 disabled:bg-green-700/30 text-white cursor-auto disabled:text-white/60 dark:disabled:text-white/30"
      disabled=""
    >
      First
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30"
      disabled=""
    >
      Second
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30"
      disabled=""
    >
      Last
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs works when: may be disabled 2`] = `
<DocumentFragment>
  <div
    class="relative 
        flex [&>*:first-child]:rounded-s-md [&>*:last-child]:rounded-r-md"
  >
    <button
      class="font-medium flex-1 py-2 px-3 bg-green-700 disabled:bg-green-700/30 text-white cursor-auto disabled:text-white/60 dark:disabled:text-white/30"
    >
      First
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30"
    >
      Second
    </button>
    <button
      class="font-medium flex-1 py-2 px-3 enabled:hover:bg-gray-400/70 dark:enabled:hover:bg-slate-800/70 dark:bg-slate-800 bg-gray-300 text-black dark:text-white disabled:bg-neutral-300/30 disabled:text-black/30 dark:disabled:bg-gray-900 dark:disabled:text-white/30"
    >
      Last
    </button>
  </div>
</DocumentFragment>
`;
